[gd_scene load_steps=2 format=3 uid="uid://ygopmyhooym2"]

[ext_resource type="Script" path="res://scripts/ui/pages/main_menu.gd" id="1_usa2l"]

[node name="MainMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_usa2l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="LocalPlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Local Play"

[node name="CreateRoomButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create Room"

[node name="BrowserButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Room Browser"
